[tool.poetry]
name = "repl-nix-emotionwavecapture"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
muselsl = "^2.3.1"
pylsl = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
